Added Genesis block embedded tweet

--- a/dashboard.css
+++ b/dashboard.css
@@ -4,7 +4,7 @@
 
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
 body {
-  padding-top: 3.5rem;
+	padding-top: 3.5rem;
 }
 
 /*
@@ -12,9 +12,9 @@ body {
  */
 
 h1 {
-  padding-bottom: 9px;
-  margin-bottom: 20px;
-  border-bottom: 1px solid #eee;
+	padding-bottom: 9px;
+	margin-bottom: 20px;
+	border-bottom: 1px solid #eee;
 }
 
 /*
@@ -22,31 +22,31 @@ h1 {
  */
 
 .sidebar {
-  position: fixed;
-  top: 51px;
-  bottom: 0;
-  left: 0;
-  z-index: 1000;
-  padding: 20px 0;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-  border-right: 1px solid #eee;
+	position: fixed;
+	top: 51px;
+	bottom: 0;
+	left: 0;
+	z-index: 1000;
+	padding: 20px 0;
+	overflow-x: hidden;
+	overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+	border-right: 1px solid #eee;
 }
 
 .sidebar .nav {
-  margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 
 .sidebar .nav-item {
-  width: 100%;
+	width: 100%;
 }
 
 .sidebar .nav-item + .nav-item {
-  margin-left: 0;
+	margin-left: 0;
 }
 
 .sidebar .nav-link {
-  border-radius: 0;
+	border-radius: 0;
 }
 
 /*
@@ -55,10 +55,15 @@ h1 {
 
 /* Placeholders */
 .placeholders {
-  padding-bottom: 3rem;
+	padding-bottom: 3rem;
 }
 
 .placeholder img {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+	padding-top: 1.5rem;
+	padding-bottom: 1.5rem;
+}
+
+.twitter-tweet {
+	margin-left: auto;
+	margin-right: auto;
 }
